<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.gdiazs.bantui</groupId>
	<artifactId>bantui-webapp</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>war</packaging>
	<name>Bantui WebApp</name>


	<properties>
		<java.version>25</java.version>
		<jakartaee.version>10.0.0</jakartaee.version>
		<tomee.version>10.1.5</tomee.version>
		<hibernate.version>6.6.53.Final</hibernate.version>
		<bcrypt.version>0.10.2</bcrypt.version>
		<junit.version>5.13.4</junit.version>
		<database.driver>org.hsqldb.jdbc.JDBCDriver</database.driver>
		<database.url>jdbc:hsqldb:file:${user.home}/.bantui/bantui;shutdown=true</database.url>
		<database.username>sa</database.username>
		<database.password></database.password>
		<hibernate.hbm2ddl.auto>update</hibernate.hbm2ddl.auto>
		<failOnMissingWebXml>false</failOnMissingWebXml>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>


	<dependencies>
		<dependency>
			<groupId>jakarta.platform</groupId>
			<artifactId>jakarta.jakartaee-api</artifactId>
			<version>${jakartaee.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.bootsfaces</groupId>
			<artifactId>bootsfaces</artifactId>
			<version>2.0.1</version>
		</dependency>

		<dependency>
			<groupId>org.omnifaces</groupId>
			<artifactId>omnifaces</artifactId>
			<version>4.7.10</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>at.favre.lib</groupId>
			<artifactId>bcrypt</artifactId>
			<version>${bcrypt.version}</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-email2-jakarta</artifactId>
			<version>2.0.0-M1</version>
		</dependency>

		<dependency>
			<groupId>org.thymeleaf</groupId>
			<artifactId>thymeleaf</artifactId>
			<version>3.1.5.RELEASE</version>
		</dependency>


		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.7.11</version>
			<scope>provided</scope>
		</dependency>



	</dependencies>

	<build>
		<finalName>bantui</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.15.0</version>
				<configuration>
					<release>${java.version}</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>3.5.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.tomee.maven</groupId>
				<artifactId>tomee-maven-plugin</artifactId>
				<version>${tomee.version}</version>
				<configuration>
					<tomeeVersion>${tomee.version}</tomeeVersion>
					<tomeeClassifier>plus</tomeeClassifier>
					<config>${project.basedir}/src/main/tomee/conf</config>
					<context>ROOT</context>
					<args>--enable-native-access=ALL-UNNAMED</args>
					<libs>
						<lib>remove:openjpa-</lib>
						<lib>org.hibernate.orm:hibernate-core:${hibernate.version}</lib>
						<lib>org.hibernate.common:hibernate-commons-annotations:7.0.3.Final</lib>
						<lib>com.fasterxml:classmate:1.5.1</lib>
						<lib>net.bytebuddy:byte-buddy:1.17.8</lib>
						<lib>org.antlr:antlr4-runtime:4.13.2</lib>
						<lib>org.postgresql:postgresql:42.7.11</lib>
					</libs>
					<systemVariables>
						<bantui.database.driver>${database.driver}</bantui.database.driver>
						<bantui.database.url>${database.url}</bantui.database.url>
						<bantui.database.username>${database.username}</bantui.database.username>
						<bantui.database.password>${database.password}</bantui.database.password>
						<hibernate.hbm2ddl.auto>${hibernate.hbm2ddl.auto}</hibernate.hbm2ddl.auto>
					</systemVariables>
				</configuration>

			</plugin>

		</plugins>

	</build>

	<profiles>
		<profile>
			<id>postgresql</id>
			<properties>
				<database.driver>org.postgresql.Driver</database.driver>
				<database.url>jdbc:postgresql://localhost:5432/bantui</database.url>
				<database.username>bantui</database.username>
				<database.password>bantui</database.password>
				<hibernate.hbm2ddl.auto>validate</hibernate.hbm2ddl.auto>
			</properties>
		</profile>
	</profiles>


</project>
